<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/home"/>
        <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"/>
        <item
        android:id="@+id/nav_favorite"
        android:icon="@drawable/ic_star"
        android:title="@string/favorite"/>
    </group>

    <item android:title="@string/Preferences">
        <menu>
            <item
                android:id="@+id/action_settings_language"
                android:icon="@drawable/ic_settings"
                android:title="@string/action_settings_language" />
            <item
                android:id="@+id/action_settings_notification"
                android:icon="@drawable/ic_settings"
                android:title="@string/action_settings_notification" />
        </menu>
    </item>

</menu>